--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
 
   </div>
     <div class="our-client">
-      <h1>기술</h1>
+      <h1>skills</h1>
     </div>
     <div class="banner-nav">
       <owl-carousel-o [options]="customOptions">
@@ -55,7 +55,7 @@
     </div>
     <div class="About-us">
       <div>
-        <h1>그외 기술</h1>
+        <h1>other skills</h1>
       </div>
     </div>
     <div class="under-main-cot">
