--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -25,8 +25,8 @@
       <owl-carousel-o [options]="customOptions">
         <ng-template carouselSlide>
           <div class="itembox">
-            <img src="assets/images/Javaspring.png" style="width: auto; height: 50px;">
-            <p class="text-p">Spring</p>
+            <img src="assets/images/jspicther.png" style="width: auto; height: 50px; padding-right: 10px;">
+            <p class="text-p">JavaScript</p>
           </div>
           
         </ng-template>
